config: フォーク後のリポジトリ整備

--- a/.github/workflows/setup-labels.yml
+++ b/.github/workflows/setup-labels.yml
@@ -26,6 +26,7 @@ jobs:
       # ステップ3: ラベルの初期設定
       # 初回コミット（親コミットがない場合）のみラベルの初期設定
       - name: GitHub Labeler
+        if: env.PARENT_COUNT == 0
         uses: crazy-max/ghaction-github-labeler@v5.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
