--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^7.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
