--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "^15.0.1",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.5",
+    "@types/resize-observer-browser": "^0.1.11",
     "cross-env": "^7.0.3",
     "gh-pages": "^3.1.0",
     "microbundle-crl": "^0.13.11",
